<resources>
    <string name="app_name">MyTeams</string>
    <string name="title_players">Players</string>
    <string name="title_teams">Teams</string>

    <string name="no_teams_added_yet">Momentan nu este adaugata nici o echipa</string>
    <string name="no_players_added_yet">Momentan nu este adaugat nici un jucator</string>

    <string name="team_id">ID Echipa</string>

    <string name="team_add_text">Nume Echipa</string>
    <string name="team_add_btn">Adauga Echipa</string>
    <string name="team_modify_btn">Modifica Echipa</string>
    <string name="team_add_title">Adauga Echipa</string>

    <string name="player_add_last_name">Nume Jucator</string>
    <string name="player_add_first_name">Prenume Jucator</string>
    <string name="player_add_birth_date">Data Nastere</string>
    <string name="player_add_btn">Adauga Jucator</string>
    <string name="player_modify_btn">Modifica Jucator</string>
    <string name="player_add_title">Adauga Jucator</string>

    <string name="btn_delete">Dezactiveaza</string>


</resources>